implement a virtual card driver to test U2F

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.7)
+include(FindPkgConfig)
 project(canokey-core C)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g")
 
@@ -23,4 +25,13 @@ if (ENABLE_TESTS)
     include(AddMockedTest)
     add_subdirectory(test)
     enable_testing()
+
+    pkg_search_module(PCSCLITE libpcsclite)
+
+    if (PCSCLITE_FOUND)
+        add_definitions(-DNFC)
+        add_library(u2f-virt-card SHARED virt-card/ifdhandler.c virt-card/apdu-adapter.c)
+        target_include_directories(u2f-virt-card SYSTEM PRIVATE u2f virt-card ${PCSCLITE_INCLUDE_DIRS})
+        target_link_libraries(u2f-virt-card ${PCSCLITE_LIBRARIES} canokey-core)
+    endif ()
 endif (ENABLE_TESTS)
