--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,8 @@ add_mocked_test(openpgp
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/fs.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../src/pin.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../openpgp/openpgp.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/../openpgp/key.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/lfs.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/lfs_util.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c)
+        ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
+        LINK_LIBRARIES canokey-crypto)
