--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_mocked_test(u2f
 
 add_mocked_test(openpgp
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../src/fs.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/../src/common.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../src/pin.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../openpgp/openpgp.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../openpgp/key.c
