--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ if (ENABLE_TESTS)
 endif (ENABLE_TESTS)
 add_subdirectory(canokey-crypto)
 
-file(GLOB SRC src/*.c littlefs/*.c u2f/*.c openpgp/*.c)
+file(GLOB SRC src/*.c littlefs/*.c u2f/*.c openpgp/*.c piv/*.c)
 add_library(canokey-core ${SRC})
 target_include_directories(canokey-core SYSTEM PUBLIC include PRIVATE littlefs)
 target_link_libraries(canokey-core canokey-crypto)
