--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,3 +5,7 @@ add_mocked_test(u2f
 add_mocked_test(openpgp
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
         LINK_LIBRARIES canokey-core)
+
+add_mocked_test(piv
+        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
+        LINK_LIBRARIES canokey-core)
