--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: bionic
+dist: xenial
 sudo: required
 language:
   - cpp
@@ -6,6 +6,7 @@ compiler:
   - gcc
 addons:
   apt:
+    update: true
     packages:
       - gcc
       - g++
