--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
       - pcscd
       - pcsc-tools
       - libpcsclite-dev
+      - libcmocka-dev
 stages:
   - compile
   - test
@@ -24,7 +25,7 @@ jobs:
       script:
         - git clone --depth 1 https://github.com/google/u2f-ref-code.git
         - cd u2f-ref-code/u2f-tests/HID
-        - git clone --depth 1 https://android.googlesource.com/platform/system/core
+        - git clone --depth 1 -b lollipop-release https://android.googlesource.com/platform/system/core
         - cd ../NFC
         - make
     - stage: "compile"
