--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - gcc
       - g++
       - cmake
+      - psmisc
       - pcscd
       - pcsc-tools
       - libpcsclite-dev
@@ -29,10 +30,12 @@ script:
   - make -j2
   - popd
   -
+  - sudo killall -9 pcscd || true
   - sudo cp build/libu2f-virt-card.so /usr/local/lib/
   - sudo cp pcscd-reader.conf /etc/reader.conf.d/
   - travis_wait 10 sudo pcscd -a -f 2>&1 |tee /tmp/pcscd.log &
-  - timeout 1s pcsc_scan -q || true
+  - timeout 1s pcsc_scan || true
   - ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v
+  - sudo killall pcscd || true
 after_failure:
   - cat /tmp/pcscd.log
