--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,9 @@ script:
   - sudo cp build/libu2f-virt-card.so /usr/local/lib/
   - sudo cp pcscd-reader.conf /etc/reader.conf.d/
   - travis_wait 10 sudo pcscd -a -f 2>&1 |tee /tmp/pcscd.log &
+  - sleep 3
   - timeout 1s pcsc_scan || true
-  - ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v
+  - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v
   - sudo killall pcscd || true
 after_failure:
   - cat /tmp/pcscd.log
