--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,11 @@ script:
   - sudo killall -9 pcscd || true
   - sudo cp build/libu2f-virt-card.so /usr/local/lib/
   - sudo cp pcscd-reader.conf /etc/reader.conf.d/
-  - travis_wait 10 sudo pcscd -a -f 2>&1 |tee /tmp/pcscd.log &
+  - travis_wait 10 sudo pcscd -a -f >/tmp/pcscd.log &
   - sleep 3
   - timeout 1s pcsc_scan || true
-  - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v
+  - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
+  - [ $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6 ]
   - sudo killall pcscd || true
 after_failure:
   - cat /tmp/pcscd.log
