--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,12 @@ script:
   - mkdir build && pushd build
   - cmake .. -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Release
   - make -j2
+  - ./canokey-crypto/test/test_aes
+  - ./canokey-crypto/test/test_ecdsa
+  - ./canokey-crypto/test/test_sha
+  - ./test/test_u2f
+  - ./test/test_piv
+  - ./test/test_openpgp
   - popd
   -
   - sudo killall -9 pcscd || true
@@ -37,7 +43,7 @@ script:
   - sleep 3
   - timeout 1s pcsc_scan || true
   - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
-  - [ $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6 ]
+  - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6
   - sudo killall pcscd || true
 after_failure:
   - cat /tmp/pcscd.log
