--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
       - psmisc
       - pcscd
       - pcsc-tools
+      - yubico-piv-tool
+      - opensc
       - libpcsclite-dev
       - libcmocka-dev
 
@@ -43,7 +45,24 @@ script:
   - travis_wait 10 sudo pcscd -a -f >/tmp/pcscd.log &
   - sleep 3
   - timeout 1s pcsc_scan || true
+  -
   - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
+  -
+  - pkcs15-tool -D
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 123456
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a change-pin -P 123456 -N 654321
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 654321
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 123456
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 123456
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 654321
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 222222
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 222222
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 222222
+  - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 654321
+  - #yubico-piv-tool -r 'Virtual Card 00 00' -P 654321 -a generate -s 9e >/tmp/pubkey-9e.pem
+  - #yubico-piv-tool -r 'Virtual Card 00 00' -P 654321 -a import-certificate -s 9e < /tmp/cert-9e.pem
+  - #yubico-piv-tool -r 'Virtual Card 00 00' -P 654321 -a selfsign-certificate -s 9e -S '/CN=test' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
+  -
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 3
   - sudo killall pcscd || true
 after_failure:
