--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
       - pcsc-tools
       - yubico-piv-tool
       - gnupg2
+      - scdaemon
       - opensc
       - libpcsclite-dev
       - libcmocka-dev
