--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ script:
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 3
   - # OpenPGP tests:
   - echo 12345678 >/tmp/passwd
-  - "echo -e 'Key-Type: 1\nKey-Length: 2048\nSubkey-Type: 1\nSubkey-Length: 2048\nName-Real: Someone\nName-Email: foo@example.com\nPassphrase: 12345678\n%commit\n%echo done' | gpg2 --batch --gen-key"
+  - "echo -e 'Key-Type: 1\\nKey-Length: 2048\\nSubkey-Type: 1\\nSubkey-Length: 2048\\nName-Real: Someone\\nName-Email: foo@example.com\\nPassphrase: 12345678\\n%commit\\n%echo done' | gpg2 --batch --gen-key"
   - KEYID=$(gpg2 -K --with-colons |grep -P '^sec'|grep -oP '\w{16}')
   - echo -e 'addkey\n6\n2048\n0\nsave' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # [2] encrypt key
   - echo -e 'addkey\n4\n2048\n0\nsave' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # [3] sign key
@@ -61,6 +61,12 @@ script:
   - echo -e 'key 2\nkeytocard\n2\nsave' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # key[2] to Encryption key
   - echo -e 'key 3\nkeytocard\n3\nsave' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # key[3] to Authentication key
   - echo -e 'admin\nname\nfirstname\nlastname\nurl\nexample.com\nlogin\nmyuserid\nsex\nm\nlist\nquit' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-card
+  - echo 123456 >/tmp/passwd
+  - "echo hello | gpg --armor --pinentry-mode loopback --passphrase-file=/tmp/passwd --default-key $(gpg2 -K --with-colons|awk -F: '$1 == \"ssb\" && $12 == \"s\" {print $5}'|tail -n 1) -s >/tmp/sign.gpg"
+  - gpg </tmp/sign.gpg
+  - "echo world | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1 == \"ssb\" && $12 == \"e\" {print $5}') --encrypt >/tmp/enc.gpg"
+  - gpg --pinentry-mode loopback --passphrase-file=/tmp/passwd -d /tmp/enc.gpg
+  - gpgconf --kill gpg-agent
   - # PIV tests:
   - pkcs15-tool -D
   - yubico-piv-tool -r 'Virtual Card 00 00' -a verify-pin -P 123456
