--- a/.travis.yml
+++ b/.travis.yml
@@ -63,9 +63,11 @@ script:
   - echo -e 'key 3\nkeytocard\n3\nsave' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # key[3] to Authentication key
   - echo -e 'admin\nname\nfirstname\nlastname\nurl\nexample.com\nlogin\nmyuserid\nsex\nm\nlist\nquit' | gpg2 --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-card
   - echo 123456 >/tmp/passwd
-  - "echo hello | gpg --armor --pinentry-mode loopback --passphrase-file=/tmp/passwd --default-key $(gpg2 -K --with-colons|awk -F: '$1 == \"ssb\" && $12 == \"s\" {print $5}'|tail -n 1) -s >/tmp/sign.gpg"
+  - "echo hello | gpg --armor --pinentry-mode loopback --passphrase-file=/tmp/passwd --default-key $(gpg2 -K --with-colons|awk -F: '$1 ~ /ssb/ && $12 ~ /s/ {print $5}'|tail -n 1) -s >/tmp/sign.gpg"
   - gpg </tmp/sign.gpg
-  - "echo world | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1 == \"ssb\" && $12 == \"e\" {print $5}') --encrypt >/tmp/enc.gpg"
+  - "echo hello2 | gpg --armor --pinentry-mode loopback --passphrase-file=/tmp/passwd --default-key $(gpg2 -K --with-colons|awk -F: '$1 ~ /ssb/ && $12 ~ /s/ {print $5}'|head -n 1) -s >/tmp/sign.gpg"
+  - gpg </tmp/sign.gpg
+  - "echo world | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1 ~ /ssb/ && $12 == \"e\" {print $5}') --encrypt >/tmp/enc.gpg"
   - gpg --pinentry-mode loopback --passphrase-file=/tmp/passwd -d /tmp/enc.gpg
   - gpgconf --kill gpg-agent
   - # PIV tests:
