--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,6 @@ addons:
       - libcmocka-dev
 
 script:
-  - READER_NAME = 'CanoKey Test 00 00'
   - gpg2 --version
   - git clone --depth 1 https://github.com/google/u2f-ref-code.git
   - pushd u2f-ref-code/u2f-tests/HID
@@ -72,19 +71,20 @@ script:
   - gpgconf --kill gpg-agent
   - # PIV tests:
   - pkcs15-tool -D
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 123456
-  - yubico-piv-tool -r "$READER_NAME" -a change-pin -P 123456 -N 654321
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 654321
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 123456 2>&1 | grep '2 tries left before pin is blocked.'
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 123456 2>&1 | grep '1 tries left before pin is blocked.'
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 654321
-  - yubico-piv-tool -r "$READER_NAME" -P 654321 -a generate -s 9e >/tmp/pubkey-9e.pem
-  - #yubico-piv-tool -r "$READER_NAME" -P 654321 -a import-certificate -s 9e < /tmp/cert-9e.pem
-  - #yubico-piv-tool -r "$READER_NAME" -P 654321 -a selfsign-certificate -s 9e -S '/CN=test' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 222222 2>&1 | grep '2 tries left before pin is blocked.'
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 222222 2>&1 | grep '1 tries left before pin is blocked.'
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 222222 2>&1 | grep 'Pin code blocked'
-  - yubico-piv-tool -r "$READER_NAME" -a verify-pin -P 654321 2>&1 | grep 'Pin code blocked'
+  - yubico-piv-tool -r "" -a verify-pin -P 123456
+  - yubico-piv-tool -r "" -a change-pin -P 123456 -N 654321
+  - yubico-piv-tool -r "" -a verify-pin -P 654321
+  - yubico-piv-tool -r "" -a verify-pin -P 123456 2>&1 | grep '2 tries left before pin is blocked.'
+  - yubico-piv-tool -r "" -a verify-pin -P 123456 2>&1 | grep '1 tries left before pin is blocked.'
+  - yubico-piv-tool -r "" -a verify-pin -P 654321
+  - yubico-piv-tool -r "" -a set-mgm-key -n 010203040506070801020304050607080102030405060708
+  - yubico-piv-tool -r "" -a generate -s 9e >/tmp/pubkey-9e.pem
+  - yubico-piv-tool -r "" -a selfsign-certificate -s 9e -S '/CN=test' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
+  - yubico-piv-tool -r "" -a import-certificate -s 9e < /tmp/cert-9e.pem
+  - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep '2 tries left before pin is blocked.'
+  - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep '1 tries left before pin is blocked.'
+  - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep 'Pin code blocked'
+  - yubico-piv-tool -r "" -a verify-pin -P 654321 2>&1 | grep 'Pin code blocked'
   -
   - sudo killall pcscd || true
 after_failure:
