--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
       - gnupg2
       - scdaemon
       - opensc
+      - openssl
       - libpcsclite-dev
       - libcmocka-dev
 
@@ -45,7 +46,7 @@ script:
   - sudo killall -9 pcscd || true
   - sudo cp build/libu2f-virt-card.so /usr/local/lib/
   - sudo cp pcscd-reader.conf /etc/reader.conf.d/
-  - travis_wait 10 sudo pcscd -a -f >/tmp/pcscd.log &
+  - travis_wait 3 sudo pcscd -a -f >/tmp/pcscd.log &
   - sleep 3
   - timeout 1s pcsc_scan || true
   - # U2F tests:
@@ -77,10 +78,11 @@ script:
   - yubico-piv-tool -r "" -a verify-pin -P 123456 2>&1 | grep '2 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 123456 2>&1 | grep '1 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 654321
-  - yubico-piv-tool -r "" -a set-mgm-key -n 010203040506070801020304050607080102030405060708
+  - #yubico-piv-tool -r "" -a set-mgm-key -n 010203040506070801020304050607080102030405060708
   - yubico-piv-tool -r "" -a generate -s 9e >/tmp/pubkey-9e.pem
-  - yubico-piv-tool -r "" -a selfsign-certificate -s 9e -S '/CN=test' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
+  - yubico-piv-tool -r "" -a selfsign-certificate -s 9e -S '/CN=CertAtSlot9e' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
   - yubico-piv-tool -r "" -a import-certificate -s 9e < /tmp/cert-9e.pem
+  - pkcs15-tool -r 04 | openssl x509 -text | grep 'CN = CertAtSlot9e'
   - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep '2 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep '1 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep 'Pin code blocked'
