--- a/.travis.yml
+++ b/.travis.yml
@@ -110,9 +110,9 @@ script:
   - yubico-piv-tool -r "" -a selfsign-certificate -s 9d -S '/CN=CertAtSlot9d' < /tmp/pubkey-9d.pem >/tmp/cert-9d.pem
   - yubico-piv-tool -r "" -a import-certificate -s 9d < /tmp/cert-9d.pem
   - yubico-piv-tool -r "" -a status
-  - yubico-piv-tool -r "" -a test-signature -s 9a < /tmp/cert-9a.pem
-  - yubico-piv-tool -r "" -a test-signature -s 9c < /tmp/cert-9c.pem
-  - yubico-piv-tool -r "" -a test-decipher -s 9d < /tmp/cert-9d.pem
+  - yubico-piv-tool -r "" -P 123456 -a verify-pin -a test-signature -s 9a < /tmp/cert-9a.pem
+  - yubico-piv-tool -r "" -P 123456 -a verify-pin -a test-signature -s 9c < /tmp/cert-9c.pem
+  - yubico-piv-tool -r "" -P 123456 -a verify-pin -a test-decipher -s 9d < /tmp/cert-9d.pem
   - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep '2 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep '1 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 222222 2>&1 | grep 'Pin code blocked'
