--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,7 @@ script:
   - yubico-piv-tool -r "" -a verify-pin -P 123456 2>&1 | grep '2 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 123456 2>&1 | grep '1 tries left before pin is blocked.'
   - yubico-piv-tool -r "" -a verify-pin -P 654321
+  - ## Key generation
   - yubico-piv-tool -r "" -a set-mgm-key -n 010203040506070801020304050607080102030405060708
   - yubico-piv-tool -r "" -a generate -s 9e >/tmp/pubkey-9e.pem # generate key at 9E
   - yubico-piv-tool -r "" -a selfsign-certificate -s 9e -S '/CN=CertAtSlot9e' < /tmp/pubkey-9e.pem >/tmp/cert-9e.pem
@@ -111,6 +112,7 @@ script:
   - yubico-piv-tool -r "" -a selfsign-certificate -s 9d -S '/CN=CertAtSlot9d' < /tmp/pubkey-9d.pem >/tmp/cert-9d.pem
   - yubico-piv-tool -r "" -a import-certificate -s 9d < /tmp/cert-9d.pem
   - yubico-piv-tool -r "" -a status
+  - ## PIN unblock
   - yubico-piv-tool -r "" -P 654321 -a verify-pin -a test-signature -s 9a < /tmp/cert-9a.pem
   - yubico-piv-tool -r "" -P 654321 -a verify-pin -a test-signature -s 9c < /tmp/cert-9c.pem
   - yubico-piv-tool -r "" -P 654321 -a verify-pin -a test-decipher -s 9d < /tmp/cert-9d.pem
@@ -122,7 +124,16 @@ script:
   - yubico-piv-tool -r "" -a change-puk -P 12345678 -N 87654321 2>&1 | grep 'Successfully changed the puk code'
   - yubico-piv-tool -r "" -a unblock-pin -P 87654321 -N 654321 2>&1 | grep 'Successfully unblocked the pin code'
   - yubico-piv-tool -r "" -a change-puk -P 12345678 -N 11111111 2>&1 | grep 'Failed verifying puk code, now 2 tries left before blocked'
-  -
+  - ## Key import
+  - openssl ecparam -name prime256v1 -out p256.pem
+  - openssl req -x509 -newkey ec:p256.pem -keyout key.pem -out cert.pem -days 365 -nodes -subj "/CN=www.example.com"
+  - yubico-piv-tool -r '' -a import-key -s 9a -i key.pem
+  - yubico-piv-tool -r '' -a import-certificate -s 9a -i cert.pem
+  - yubico-piv-tool -r '' -P 654321 -a verify-pin -a test-signature -s 9a <cert.pem
+  - openssl req -x509 -newkey rsa:2048 -keyout key.pem -out cert.pem -days 365 -nodes -subj "/CN=www.example.com"
+  - yubico-piv-tool -r '' -a import-key -s 9c -i key.pem
+  - yubico-piv-tool -r '' -a import-certificate -s 9c -i cert.pem
+  - yubico-piv-tool -r '' -P 654321 -a verify-pin -a test-signature -s 9c <cert.pem
   - sudo killall pcscd || true
 after_failure:
   - cat /tmp/pcscd.log
