ADD PIC for test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,15 @@ cmake_minimum_required(VERSION 3.7)
 include(FindPkgConfig)
 project(canokey-core C)
 
+option(ENABLE_TESTS "Perform unit tests after build" OFF)
+if (ENABLE_TESTS)
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif (ENABLE_TESTS)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -Wall -fno-omit-frame-pointer -fsanitize=address")
 set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} -lasan")
 
-option(ENABLE_TESTS "Perform unit tests after build" OFF)
 if (ENABLE_TESTS)
     add_definitions(-DTEST -DNFC)
 endif (ENABLE_TESTS)
@@ -30,11 +33,11 @@ if (ENABLE_TESTS)
     pkg_search_module(PCSCLITE libpcsclite)
 
     if (PCSCLITE_FOUND)
-        add_library(u2f-virt-card SHARED 
-            virt-card/ifdhandler.c
-            virt-card/apdu-adapter.c
-            virt-card/fabrication.c
-            littlefs/emubd/lfs_emubd.c)
+        add_library(u2f-virt-card SHARED
+                virt-card/ifdhandler.c
+                virt-card/apdu-adapter.c
+                virt-card/fabrication.c
+                littlefs/emubd/lfs_emubd.c)
         target_include_directories(u2f-virt-card SYSTEM PRIVATE virt-card ${PCSCLITE_INCLUDE_DIRS} littlefs)
         target_link_libraries(u2f-virt-card ${PCSCLITE_LIBRARIES} canokey-core)
     endif ()
