--- a/.travis.yml
+++ b/.travis.yml
@@ -134,6 +134,12 @@ script:
   - yubico-piv-tool -r '' -a import-key -s 9c -i key.pem
   - yubico-piv-tool -r '' -a import-certificate -s 9c -i cert.pem
   - yubico-piv-tool -r '' -P 654321 -a verify-pin -a test-signature -s 9c <cert.pem
+  - ## Factory reset
+  - yubico-piv-tool -r "" -a change-puk -P 12345678 -N 11111111 2>&1 | grep 'Failed verifying puk code, now 2 tries left before blocked'
+  - yubico-piv-tool -r "" -a change-puk -P 12345678 -N 11111111 2>&1 | grep 'Failed verifying puk code, now 1 tries left before blocked'
+  - yubico-piv-tool -r "" -a change-puk -P 12345678 -N 11111111 2>&1 | grep 'The puk code is blocked'
+  - yubico-piv-tool -r "" -a change-puk -P 87654321 -N 11111111 2>&1 | grep 'The puk code is blocked'
+  - yubico-piv-tool -r "" -a reset
+  - yubico-piv-tool -r "" -a unblock-pin -P 12345678 -N 123456 2>&1 | grep 'Successfully unblocked the pin code'
   - sudo killall pcscd || true
-after_failure:
   - cat /tmp/pcscd.log
