--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,3 +9,7 @@ add_mocked_test(openpgp
 add_mocked_test(piv
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
         LINK_LIBRARIES canokey-core)
+
+add_mocked_test(oath
+        SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
+        LINK_LIBRARIES canokey-core)
