--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ dist: bionic
 sudo: required
 language:
   - cpp
+  - go
+go:
+  - 1.12.x
+env:
+  - GO111MODULE=on
 compiler:
   - gcc
 addons:
@@ -21,7 +26,8 @@ addons:
       - openssl
       - libpcsclite-dev
       - libcmocka-dev
-
+install:
+  - go build -o test-oath virt-card/test-oath.go
 script:
   - gpg --version
   - git clone --depth 1 https://github.com/google/u2f-ref-code.git
@@ -49,6 +55,8 @@ script:
   - travis_wait 3 sudo pcscd -a -f >/tmp/pcscd.log &
   - sleep 3
   - timeout 1s pcsc_scan || true
+  - # OATH test:
+  - ./test-oath
   - # U2F tests:
   - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 3
