--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ if (ENABLE_TESTS)
 endif (ENABLE_TESTS)
 add_subdirectory(canokey-crypto)
 
-file(GLOB SRC src/*.c littlefs/*.c u2f/*.c openpgp/*.c piv/*.c oath/*.c admin/*.c)
+file(GLOB SRC src/*.c littlefs/*.c fido2/*.c openpgp/*.c piv/*.c oath/*.c admin/*.c tinycbor/src/*.c)
 add_library(canokey-core ${SRC})
-target_include_directories(canokey-core SYSTEM PUBLIC include littlefs)
+target_include_directories(canokey-core SYSTEM PUBLIC include littlefs tinycbor/src)
 target_link_libraries(canokey-core canokey-crypto)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
