--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ addons:
       - libpcsclite-dev
       - libcmocka-dev
       - python3-pip
+      - python3-setuptools
+      - python3-wheel
 install:
   - go build -o test-oath virt-card/test-oath.go
   -
