--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,12 @@ script:
   - ./test/test_openpgp
   - popd
   -
+  - travis_wait 3 ./fido-hid-over-udp >/tmp/fido-udp.log &
+  - pushd fido2-tests
+  - ~/.local/bin/pytest --color=yes --sim tests/standard/fido2/
+  - popd
+  - killall fido-hid-over-udp || true
+  -
   - sudo killall -9 pcscd || true
   - sudo cp build/libu2f-virt-card.so /usr/local/lib/
   - sudo cp pcscd-reader.conf /etc/reader.conf.d/
